Refactor ClockInService and add create project functionality
Refactor ClockInService to use consistent list access methods and improve error logging. Introduce CreateProjectService functionality by adding